# Cupcake

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
benches/: butterfly.rs  example.rs  integerops.rs  polyops.rs  scheme.rs
examples/: basic.rs  flexible_ptxt.rs  parallel.rs  rerandomize.rs  serialization.rs
src/: lib.rs  randutils.rs  rqpoly.rs  serialize.rs  traits.rs  utils.rs
src/integer_arith/: butterfly.rs  mod.rs  scalar.rs  util.rs
src/polyarith/: lazy_ntt.rs  mod.rs
