[package]
name = "Cupcake"
version = "0.1.1"
authors = ["Hao Chen <haoche@fb.com>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/facebookresearch/Cupcake/"
readme = "README.md"
keywords = ["cryptography", "crypto", "homomorphic", "encryption"]
description = "An implementation of a lattice-based additive homomorphic encryption scheme"

[dependencies]
rand = "0.5.5"
modinverse = "0.1.1"
rayon = "1.3.0"

[dev-dependencies]
bencher = "0.1.5"

[lib]
name = "cupcake"
path = "src/lib.rs"

[[example]]
name = "basic"

[[example]]
name = "serialization"

[[bench]]
name = "example"
harness = false
